--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   dio: ^5.5.0+1 #dio网络请求
   path_provider: ^2.1.4 #文件目录操作
   oktoast: ^3.4.0 #toast土司提示
+  contained_tab_bar_view: ^0.8.0
 
 dev_dependencies:
   flutter_test:
