--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: flutter_widgets
 description: A new Flutter project.
 
 publish_to: 'none'
-version: 1.0.0+1
+version: 1.0.2+3  # 'flutterVersionName+flutterVersionCode' 建构时写入local.properties文件
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
@@ -18,6 +18,8 @@ dependencies:
   path_provider: ^2.1.4 #文件目录操作
   oktoast: ^3.4.0 #toast土司提示
   contained_tab_bar_view: ^0.8.0
+  package_info_plus: ^8.0.2
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
