--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   contained_tab_bar_view: ^0.8.0
   package_info_plus: ^8.0.2
   shared_preferences: ^2.2.3
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
