--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   package_info_plus: ^8.0.2
   shared_preferences: ^2.2.3
   pull_to_refresh: ^2.0.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
