--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   file_picker: ^8.0.5 #图片文档选择
   connectivity_plus: ^6.0.4 #网络检查
+  network_info_plus: ^6.0.1 #网络信息
   dio: ^5.5.0+1 #dio网络请求
   path_provider: ^2.1.4 #文件目录操作
   oktoast: ^3.4.0 #toast土司提示
